--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ frontend/core/src/main/webapp/static/css
 frontend/core/src/main/webapp/static/favicon/
 frontend/core/src/main/webapp/static/img/
 frontend/core/src/main/webapp/static/fonts/
+frontend/core/src/main/webapp/static/audio/
+frontend/core/src/main/webapp/landing/audio/
 
 # Ignore PhantomJS logs
 phantomjsdriver.log
