--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -150,6 +150,9 @@
               <directory>${basedir}/src/main/webapp/static/fonts</directory>
             </fileset>
             <fileset>
+              <directory>${basedir}/src/main/webapp/static/js</directory>
+            </fileset>
+            <fileset>
               <directory>${basedir}/src/main/webapp/static/audio</directory>
             </fileset>
             <fileset>
@@ -191,21 +194,12 @@
                 <exclude>app/**/*.js</exclude>
                 <exclude>common/**/*.js</exclude>
                 <exclude>less/**</exclude>
-                <exclude>js/**</exclude>
                 <exclude>lib/**</exclude>
               </excludes>
             </resource>
             <resource>
               <directory>src/main/webapp/static/lib/lawnchair</directory>
               <targetPath>static/${project.version}</targetPath>
-              <excludes>
-                <exclude>**/*.jshintrc</exclude>
-                <exclude>app/**/*.js</exclude>
-                <exclude>common/**/*.js</exclude>
-                <exclude>less/**</exclude>
-                <exclude>js/**</exclude>
-                <exclude>lib/**</exclude>
-              </excludes>
             </resource>
           </webResources>
           <packagingIncludes>
@@ -401,6 +395,46 @@
                       <resources>
                           <resource>
                               <directory>${project.basedir}/src/main/webapp/landing/fonts</directory>
+                          </resource>
+                      </resources>
+                  </configuration>
+              </execution>
+              <execution>
+                  <id>copy-animation-js</id>
+                  <phase>generate-resources</phase>
+                  <goals>
+                      <goal>copy-resources</goal>
+                  </goals>
+                  <configuration>
+                      <outputDirectory>${project.basedir}/src/main/webapp/static/js</outputDirectory>
+                      <overwrite>true</overwrite>
+                      <resources>
+                          <resource>
+                              <directory>${project.basedir}/src/main/webapp/landing/js</directory>
+                              <includes>
+                                  <include>em-animation.js</include>
+                                  <include>animo.min.js</include>
+                              </includes>
+                          </resource>
+                      </resources>
+                  </configuration>
+              </execution>
+              <execution>
+                  <id>copy-animation-css</id>
+                  <phase>generate-resources</phase>
+                  <goals>
+                      <goal>copy-resources</goal>
+                  </goals>
+                  <configuration>
+                      <outputDirectory>${project.basedir}/src/main/webapp/static/css</outputDirectory>
+                      <overwrite>true</overwrite>
+                      <resources>
+                          <resource>
+                              <directory>${project.basedir}/src/main/webapp/landing/css</directory>
+                              <includes>
+                                  <include>em-animation.css</include>
+                                  <include>animate-animo.css</include>
+                              </includes>
                           </resource>
                       </resources>
                   </configuration>
