--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -37,9 +37,9 @@
   </developers>
 
   <properties>
-    <neo4j.version>2.0.3</neo4j.version>
-    <spray.version>1.3.1</spray.version>
-    <akka.version>2.3.0</akka.version>
+    <neo4j.version>2.2.0</neo4j.version>
+    <spray.version>1.3.3</spray.version>
+    <akka.version>2.3.9</akka.version>
   </properties>
 
   <dependencies>
@@ -53,21 +53,21 @@
     <!-- Spray.io -->
     <dependency>
       <groupId>io.spray</groupId>
-      <artifactId>spray-io</artifactId>
+      <artifactId>spray-io_${scala.version.short}</artifactId>
       <version>${spray.version}</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>io.spray</groupId>
-      <artifactId>spray-can</artifactId>
+      <artifactId>spray-can_${scala.version.short}</artifactId>
       <version>${spray.version}</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>io.spray</groupId>
-      <artifactId>spray-routing</artifactId>
+      <artifactId>spray-routing_${scala.version.short}</artifactId>
       <version>${spray.version}</version>
       <type>jar</type>
       <scope>compile</scope>
@@ -75,13 +75,13 @@
     <dependency>
       <groupId>io.spray</groupId>
       <artifactId>spray-json_${scala.version.short}</artifactId>
-      <version>1.2.5</version>
+      <version>1.3.1</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
 	<dependency>
       <groupId>io.spray</groupId>
-      <artifactId>spray-client</artifactId>
+      <artifactId>spray-client_${scala.version.short}</artifactId>
       <version>${spray.version}</version>
       <type>jar</type>
       <scope>compile</scope>
@@ -105,7 +105,7 @@
     <dependency>
       <groupId>org.extendedmind</groupId>
       <artifactId>neo4j-timestamp</artifactId>
-      <version>${neo4j.version}.1</version>
+      <version>${neo4j.version}</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
@@ -176,7 +176,7 @@
     <!-- Test -->
     <dependency>
       <groupId>io.spray</groupId>
-      <artifactId>spray-testkit</artifactId>
+      <artifactId>spray-testkit_${scala.version.short}</artifactId>
       <version>${spray.version}</version>
       <type>jar</type>
       <scope>test</scope>
@@ -198,6 +198,13 @@
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-kernel</artifactId>
+      <version>${neo4j.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-io</artifactId>
       <version>${neo4j.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
