Removed old invite code, beginnings of list inviting code

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -51,10 +51,8 @@ extendedmind {
     templates {
       # Set this to use custom emails 
       # directory = "custom_email_template_directory"
-      requestInviteConfirmationTitle = "get ready to extend your mind"
-      requestInviteOrderNumberURI = "waiting.html?uuid=uuidValue"
-      acceptInviteRequestTitle = "invitation to join the extended mind"
-      acceptInviteURI = "accept/inviteValue?email=emailValue"
+      listInviteTitle = "inviterEmail shared a list with you"
+      inviteURI = "accept/inviteValue?email=emailValue"
       resetPasswordTitle = "password reset instructions"
       resetPasswordURI = "reset/resetCodeValue?email=emailValue"
       verifyEmailTitle = "verify your email address"
