Removed traces of invites for better maintainability

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -51,8 +51,8 @@ extendedmind {
     templates {
       # Set this to use custom emails 
       # directory = "custom_email_template_directory"
-      listInviteTitle = "inviterEmail shared a list with you"
-      inviteURI = "accept/inviteValue?email=emailValue"
+      shareListTitle = "inviterEmail shared a list with you"
+      acceptShareURI = "accept/shareValue?email=emailValue"
       resetPasswordTitle = "password reset instructions"
       resetPasswordURI = "reset/resetCodeValue?email=emailValue"
       verifyEmailTitle = "verify your email address"
