Added possibility to set cordova backend URL with -Dcordova.urlPrefix maven variable

--- a/frontend/cordova/pom.xml
+++ b/frontend/cordova/pom.xml
@@ -38,6 +38,7 @@
     <skipIos>true</skipIos>
     <cordova.bundleId>org.extendedmind</cordova.bundleId>
     <cordova.buildNumber>0</cordova.buildNumber>
+    <cordova.urlPrefix>https://ext.md</cordova.urlPrefix>
   </properties>
 
   <profiles>
