Added sound effect to notification, refactored ReminderService to separate local notification cleanly from reminder

--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -327,6 +327,7 @@
                               <directory>${user.home}/.extendedmind</directory>
                               <includes>
                                   <include>theme.*</include>
+                                  <include>notification.*</include>
                               </includes>
                           </resource>
                       </resources>
