--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -328,6 +328,66 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.jolokia</groupId>
+        <artifactId>docker-maven-plugin</artifactId>
+        <configuration>
+          <images>
+            <image>
+              <name>extendedmind/backend</name>
+              <alias>backend</alias>
+              <run>
+                <env>
+                  <CATALINA_OPTS>-Xmx32m</CATALINA_OPTS>
+                </env>
+                <ports>
+                  <port>extendedmind.port:8081</port>
+                </ports>
+                <links>
+                  <link>db</link>
+                </links>
+                <wait>
+                  <url>http://localhost:${extendedmind.port}/jolokia</url>
+                  <time>10000</time>
+                </wait>
+                <command>java -jar /maven/docker-demo.jar</command>
+              </run>
+              <build>
+                <from>java:8</from>
+                <maintainer>timo.tiuraniemi@iki.fi</maintainer>
+                <tags>
+                  <tag>latest</tag>
+                  <tag>${project.version}</tag>
+                </tags>
+                <ports>
+                  <port>8081</port>
+                </ports>
+                <!--volumes>
+                  <volume>/path/to/expose</volume>
+                </volumes-->
+                <command>java /usr/src/extendedmind/server.jar</command>
+                <assembly>
+                  <mode>dir</mode>
+                  <basedir>/usr/src/extendedmind</basedir>
+                  <descriptor>assembly.xml</descriptor>
+                </assembly>
+              </build>
+            </image>
+          </images>
+        </configuration>
+        <!-- Connect start/stop to pre- and
+             post-integration-test phase, respectively if you want to start
+             your docker containers during integration tests -->
+        <!--executions>
+          <execution>
+             <id>build</id>
+             <phase>package</phase>
+             <goals>
+               <goal>build</goal>
+             </goals>
+          </execution>
+        </executions-->
+      </plugin>
     </plugins>
   </build>
 </project>
