--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -334,6 +334,44 @@
         <configuration>
           <images>
             <image>
+              <name>extendedmind/backend-conf</name>
+              <alias>backend-conf</alias>
+              <build>
+                <from>java:8</from>
+                <maintainer>timo.tiuraniemi@iki.fi</maintainer>
+                <tags>
+                  <tag>latest</tag>
+                </tags>
+                <assembly>
+                  <mode>dir</mode>
+                  <basedir>/etc/extendedmind</basedir>
+                  <descriptor>backend-conf-assembly.xml</descriptor>
+                </assembly>
+                <volumes>
+                  <volume>/etc/extendedmind</volume>
+                </volumes>
+              </build>
+            </image>
+            <image>
+              <name>extendedmind/backend-data</name>
+              <alias>backend-data</alias>
+              <build>
+                <from>java:8</from>
+                <maintainer>timo.tiuraniemi@iki.fi</maintainer>
+                <tags>
+                  <tag>latest</tag>
+                </tags>
+                <assembly>
+                  <mode>dir</mode>
+                  <basedir>/var/extendedmind</basedir>
+                  <descriptor>backend-data-assembly.xml</descriptor>
+                </assembly>
+                <volumes>
+                  <volume>/var/extendedmind/neo4j</volume>
+                </volumes>
+              </build>
+            </image>
+            <image>
               <name>extendedmind/backend</name>
               <alias>backend</alias>
               <build>
@@ -349,7 +387,7 @@
                 <assembly>
                   <mode>dir</mode>
                   <basedir>/usr/src/extendedmind</basedir>
-                  <descriptor>assembly.xml</descriptor>
+                  <descriptor>backend-assembly.xml</descriptor>
                 </assembly>
               </build>
             </image>
