Added mongodb containers to the mix

--- a/backend/src/main/docker/application.conf.toml
+++ b/backend/src/main/docker/application.conf.toml
@@ -2,7 +2,7 @@
 src = "application.conf.tmpl"
 dest = "/etc/extendedmind/application.conf"
 keys = [
-    "/extendedmind/backend/neo4jHA",
+    "/extendedmind/ha",
     "/extendedmind/backend/tokenSecret",
     "/extendedmind/backend/signUpMode",
     "/extendedmind/backend/mailgunKey",
