--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -334,6 +334,44 @@
         <configuration>
           <images>
             <image>
+              <name>extendedmind/mongodb-conf</name>
+              <alias>mongodb-conf</alias>
+              <build>
+                <from>mongo:3</from>
+                <maintainer>timo.tiuraniemi@iki.fi</maintainer>
+                <tags>
+                  <tag>latest</tag>
+                </tags>
+                <assembly>
+                  <mode>dir</mode>
+                  <basedir>/etc/mongodb</basedir>
+                  <descriptor>mongo-conf-assembly.xml</descriptor>
+                </assembly>
+                <volumes>
+                  <volume>/etc/mongodb</volume>
+                </volumes>
+              </build>
+            </image>
+            <image>
+              <name>extendedmind/mongodb-data</name>
+              <alias>mongodb-data</alias>
+              <build>
+                <from>mongo:3</from>
+                <maintainer>timo.tiuraniemi@iki.fi</maintainer>
+                <tags>
+                  <tag>latest</tag>
+                </tags>
+                <assembly>
+                  <mode>dir</mode>
+                  <basedir>/var/extendedmind</basedir>
+                  <descriptor>mongo-data-assembly.xml</descriptor>
+                </assembly>
+                <volumes>
+                  <volume>/var/extendedmind/mongodb</volume>
+                </volumes>
+              </build>
+            </image>
+            <image>
               <name>extendedmind/backend-conf</name>
               <alias>backend-conf</alias>
               <build>
@@ -381,9 +419,6 @@
                   <tag>latest</tag>
                   <tag>${project.version}</tag>
                 </tags>
-                <ports>
-                  <port>8081</port>
-                </ports>
                 <assembly>
                   <mode>dir</mode>
                   <basedir>/usr/src/extendedmind</basedir>
