--- a/backend/src/main/docker/mongodb.conf.toml
+++ b/backend/src/main/docker/mongodb.conf.toml
@@ -1,5 +1,5 @@
 [template]
-src = "mongodb.conf.tmpl"
+src = "/etc/confd/templates/mongodb.conf.tmpl"
 dest = "/etc/mongodb/mongodb.conf"
 keys = [
     "/extendedmind/ha"
