--- a/backend/src/main/docker/logback.xml.toml
+++ b/backend/src/main/docker/logback.xml.toml
@@ -1,3 +1,3 @@
 [template]
-src = "/etc/confd/templates/logback.xml.tmpl"
+src = "../templates/backend/logback.xml.tmpl"
 dest = "/etc/extendedmind/logback.xml"
