--- a/e2e/pom.xml
+++ b/e2e/pom.xml
@@ -93,7 +93,7 @@
       <artifactId>junit</artifactId>
       <type>jar</type>
       <scope>test</scope>
-    </dependency>   
+    </dependency>
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
@@ -214,7 +214,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>        
+        <configuration>
           <skipTests>true</skipTests>
         </configuration>
       </plugin>
@@ -231,7 +231,7 @@
             </goals>
           </execution>
         </executions>
-        <configuration>        
+        <configuration>
           <skipTests>${skipJUnitTests}</skipTests>
         </configuration>
       </plugin>
@@ -247,7 +247,7 @@
             </goals>
           </execution>
         </executions>
-        <configuration>        
+        <configuration>
           <skipTests>${skipScalaTestTests}</skipTests>
         </configuration>
       </plugin>
@@ -386,6 +386,39 @@
                 </links>
               </run>
             </image>
+            <image>
+              <name>extendedmind/frontend-data</name>
+              <alias>frontend-data</alias>
+            </image>
+            <image>
+              <name>extendedmind/frontend</name>
+              <alias>frontend</alias>
+              <run>
+                <volumes>
+                  <from>
+                    <image>frontend-data</image>
+                  </from>
+                </volumes>
+              </run>
+            </image>
+            <image>
+              <name>extendedmind/nginx</name>
+              <alias>nginx</alias>
+              <run>
+                <volumes>
+                  <from>
+                    <image>frontend</image>
+                  </from>
+                </volumes>
+                <links>
+                  <link>backend:backend</link>
+                </links>
+                <ports>
+                  <port>591:591</port>
+                  <port>8008:8008</port>
+                </ports>
+              </run>
+            </image>
           </images>
         </configuration>
         <!-- Connect start/stop to pre- and
@@ -404,7 +437,7 @@
     </plugins>
     <pluginManagement>
       <plugins>
-        <!--This plugin's configuration is used to store Eclipse m2e settings 
+        <!--This plugin's configuration is used to store Eclipse m2e settings
           only. It has no influence on the Maven build itself. -->
         <plugin>
           <groupId>org.eclipse.m2e</groupId>
