--- a/frontend/core/src/main/docker/nginx.extendedmind.conf
+++ b/frontend/core/src/main/docker/nginx.extendedmind.conf
@@ -37,23 +37,23 @@ server {
     proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
   }
 
-#  location /collect {
-#    rewrite /collect(.*) $1 break;
-#    proxy_pass http://COLLECT_IP:1080;
-#    proxy_redirect     off;
-#    proxy_set_header   Host             $host;
-#    proxy_set_header   X-Real-IP        $remote_addr;
-#    proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
-#  }
+  location /collect {
+    rewrite /collect(.*) $1 break;
+    proxy_pass http://COLLECT_IP:1080;
+    proxy_redirect     off;
+    proxy_set_header   Host             $host;
+    proxy_set_header   X-Real-IP        $remote_addr;
+    proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+  }
 
-#  location /evaluate/ {
-#    auth_basic "Restricted";
-#    auth_basic_user_file /usr/share/nginx/.htpasswd;
-#    rewrite /evaluate(.*) $1 break;
-#    proxy_pass http://EVALUATE_IP:1081;
-#    proxy_redirect     off;
-#    proxy_set_header   Host             $host;
-#    proxy_set_header   X-Real-IP        $remote_addr;
-#    proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
-#  }
+  location /evaluate/ {
+    auth_basic "Restricted";
+    auth_basic_user_file /etc/nginx/credentials/evaluate.htpasswd;
+    rewrite /evaluate(.*) $1 break;
+    proxy_pass http://EVALUATE_IP:1081;
+    proxy_redirect     off;
+    proxy_set_header   Host             $host;
+    proxy_set_header   X-Real-IP        $remote_addr;
+    proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+  }
 }
