Activated docker builds if DOCKER_HOST is present on the maven lifecycle. Deleted broken e2e tests, need to build new e2e tests on Protractor using xfvb and not phantomjs which does not actually seem to work.

--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -618,10 +618,7 @@
             </image>
           </images>
         </configuration>
-        <!-- Connect start/stop to pre- and
-             post-integration-test phase, respectively if you want to start
-             your docker containers during integration tests -->
-        <!--executions>
+        <executions>
           <execution>
              <id>build</id>
              <phase>package</phase>
@@ -629,7 +626,7 @@
                <goal>build</goal>
              </goals>
           </execution>
-        </executions-->
+        </executions>
       </plugin>
 
     </plugins>
