--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -456,10 +456,7 @@
             </image>
           </images>
         </configuration>
-        <!-- Connect start/stop to pre- and
-             post-integration-test phase, respectively if you want to start
-             your docker containers during integration tests -->
-        <!--executions>
+        <executions>
           <execution>
              <id>build</id>
              <phase>package</phase>
@@ -467,7 +464,7 @@
                <goal>build</goal>
              </goals>
           </execution>
-        </executions-->
+        </executions>
       </plugin>
     </plugins>
   </build>
