--- a/e2e/pom.xml
+++ b/e2e/pom.xml
@@ -7,7 +7,7 @@
     <version>0-SNAPSHOT</version>
   </parent>
   <artifactId>e2e</artifactId>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
   <name>Extended Mind :: End-to-end Tests </name>
   <description>Extended Mind End-to-end Tests</description>
   <url>https://github.com/extendedmind/extendedmind</url>
@@ -47,13 +47,6 @@
 
   <dependencies>
 
-    <!-- Scala -->
-    <dependency>
-      <groupId>org.scala-lang</groupId>
-      <artifactId>scala-library</artifactId>
-      <scope>test</scope>
-    </dependency>
-
     <dependency>
       <groupId>org.extendedmind</groupId>
       <artifactId>backend</artifactId>
@@ -65,47 +58,12 @@
       <groupId>org.extendedmind.frontend</groupId>
       <artifactId>frontend-core</artifactId>
       <type>war</type>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.scalatest</groupId>
-      <artifactId>scalatest_${scala.version.short}</artifactId>
-      <type>jar</type>
-      <scope>test</scope>
-    </dependency>
-
-    <!-- Selenium dependency, use PhantomJS -->
-    <dependency>
-      <groupId>com.github.detro.ghostdriver</groupId>
-      <artifactId>phantomjsdriver</artifactId>
-      <version>1.0.4</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.zeroturnaround</groupId>
-      <artifactId>zt-zip</artifactId>
-      <type>jar</type>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <type>jar</type>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <type>jar</type>
-      <scope>test</scope>
+      <scope>compile</scope>
     </dependency>
 
   </dependencies>
 
   <build>
-    <sourceDirectory>src/main/scala</sourceDirectory>
-    <testSourceDirectory>src/test/scala</testSourceDirectory>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -127,28 +85,12 @@
                   <outputDirectory>${project.build.directory}</outputDirectory>
                   <includes>*.zip, testData.properties</includes>
                 </artifactItem>
-                <artifactItem>
-                  <groupId>org.extendedmind</groupId>
-                  <artifactId>backend</artifactId>
-                  <type>zip</type>
-                  <classifier>dist</classifier>
-                  <overWrite>true</overWrite>
-                  <outputDirectory>${project.build.directory}</outputDirectory>
-                </artifactItem>
-                <artifactItem>
-                  <groupId>org.extendedmind</groupId>
-                  <artifactId>phantomjs</artifactId>
-                  <type>zip</type>
-                  <classifier>dist</classifier>
-                  <overWrite>true</overWrite>
-                  <outputDirectory>${project.build.directory}</outputDirectory>
-                </artifactItem>
               </artifactItems>
             </configuration>
           </execution>
           <execution>
             <id>copy</id>
-            <phase>generate-test-resources</phase>
+            <phase>generate-resources</phase>
             <goals>
               <goal>copy</goal>
             </goals>
@@ -158,7 +100,7 @@
                   <groupId>org.extendedmind.frontend</groupId>
                   <artifactId>frontend-core</artifactId>
                   <type>war</type>
-                  <overWrite>false</overWrite>
+                  <overWrite>true</overWrite>
                   <outputDirectory>${project.build.directory}</outputDirectory>
                 </artifactItem>
               </artifactItems>
@@ -184,81 +126,12 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-clean-plugin</artifactId>
-        <configuration>
-          <filesets>
-            <fileset>
-              <directory>${basedir}</directory>
-              <includes>
-                <include>phantomjsdriver.log</include>
-              </includes>
-            </fileset>
-            <fileset>
-              <directory>${basedir}/logs</directory>
-            </fileset>
-          </filesets>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>net.alchim31.maven</groupId>
-        <artifactId>scala-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>testCompile</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <skipTests>true</skipTests>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>junit-test</id>
-            <phase>integration-test</phase>
-            <goals>
-              <goal>integration-test</goal>
-              <goal>verify</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <skipTests>${skipJUnitTests}</skipTests>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.scalatest</groupId>
-        <artifactId>scalatest-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>test</id>
-            <phase>integration-test</phase>
-            <goals>
-              <goal>test</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <skipTests>${skipScalaTestTests}</skipTests>
-        </configuration>
-      </plugin>
-      <plugin>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
         <version>${jetty.version}</version>
         <executions>
           <execution>
             <id>deploy-war</id>
-            <phase>pre-integration-test</phase>
             <goals>
               <goal>deploy-war</goal>
             </goals>
@@ -266,13 +139,6 @@
               <daemon>true</daemon>
               <reload>manual</reload>
             </configuration>
-          </execution>
-          <execution>
-            <id>stop-jetty</id>
-            <phase>post-integration-test</phase>
-            <goals>
-              <goal>stop</goal>
-            </goals>
           </execution>
         </executions>
         <configuration>
@@ -296,25 +162,6 @@
             <scope>runtime</scope>
           </dependency>
         </dependencies>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>pre-integration-test</phase>
-            <goals>
-              <goal>exec</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <executable>java</executable>
-          <commandlineArgs>-cp "${project.build.directory}/backend-${project.version}/lib/*" org.extendedmind.Server</commandlineArgs>
-          <background>true</background>
-          <!-- Poll for backend server to be up and running -->
-          <backgroundPollingAddress>127.0.0.1:8081</backgroundPollingAddress>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.jolokia</groupId>
@@ -449,83 +296,24 @@
             </image>
           </images>
         </configuration>
-        <!-- Connect start/stop to pre- and
-             post-integration-test phase, respectively if you want to start
-             your docker containers during integration tests -->
-        <!--executions>
+        <executions>
           <execution>
-             <id>build</id>
-             <phase>package</phase>
+             <id>start-docker</id>
+             <phase>pre-integration-test</phase>
              <goals>
-               <goal>build</goal>
+               <goal>start</goal>
              </goals>
           </execution>
-        </executions-->
+          <execution>
+             <id>stop-docker</id>
+             <phase>post-integration-test</phase>
+             <goals>
+               <goal>stop</goal>
+             </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
-    <pluginManagement>
-      <plugins>
-        <!--This plugin's configuration is used to store Eclipse m2e settings
-          only. It has no influence on the Maven build itself. -->
-        <plugin>
-          <groupId>org.eclipse.m2e</groupId>
-          <artifactId>lifecycle-mapping</artifactId>
-          <version>1.0.0</version>
-          <configuration>
-            <lifecycleMappingMetadata>
-              <pluginExecutions>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-dependency-plugin</artifactId>
-                    <versionRange>[2.8,)</versionRange>
-                    <goals>
-                      <goal>unpack</goal>
-                      <goal>copy</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <ignore></ignore>
-                  </action>
-                </pluginExecution>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>
-                      org.apache.maven.plugins
-                    </groupId>
-                    <artifactId>
-                      maven-antrun-plugin
-                    </artifactId>
-                    <versionRange>[1.7,)</versionRange>
-                    <goals>
-                      <goal>run</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <ignore></ignore>
-                  </action>
-                </pluginExecution>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>org.eclipse.jetty</groupId>
-                    <artifactId>jetty-maven-plugin</artifactId>
-                    <versionRange>[9,)</versionRange>
-                    <goals>
-                      <goal>start</goal>
-                      <goal>deploy-war</goal>
-                      <goal>stop</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <ignore></ignore>
-                  </action>
-                </pluginExecution>
-              </pluginExecutions>
-            </lifecycleMappingMetadata>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
   </build>
 
 </project>
