--- a/e2e/pom.xml
+++ b/e2e/pom.xml
@@ -294,6 +294,15 @@
                 </ports>
               </run>
             </image>
+            <image>
+              <name>extendedmind/backend-backup</name>
+              <alias>backend-backup</alias>
+              <run>
+                <links>
+                  <link>backend:backend</link>
+                </links>
+              </run>
+            </image>
           </images>
         </configuration>
         <executions>
